--- a/nft-club-hardhat/package.json
+++ b/nft-club-hardhat/package.json
@@ -8,6 +8,7 @@
     "hardhat-deploy": "^0.11.43"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0",
     "dotenv": "^16.3.1"
   }
 }
