--- a/nft-club-next/package.json
+++ b/nft-club-next/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3uikit/core": "^1.1.5",
+    "@web3uikit/icons": "^1.1.2",
+    "@web3uikit/web3": "^0.3.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
