--- a/nft-club-hardhat/package.json
+++ b/nft-club-hardhat/package.json
@@ -3,12 +3,14 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.4.1",
+    "@types/fs-extra": "^11.0.4",
     "ethers": "^6.8.1",
     "hardhat": "^2.19.1",
     "hardhat-deploy": "^0.11.43"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "fs-extra": "^11.1.1"
   }
 }
