--- a/nft-club-next/package.json
+++ b/nft-club-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-club-bext",
+  "name": "nft-club-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web3uikit/core": "^1.1.5",
-    "@web3uikit/icons": "^1.1.2",
-    "@web3uikit/web3": "^0.3.2",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "ethers": "^6.8.1",
+    "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-moralis": "^1.4.2"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.38",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "typescript": "^5"
+    "typescript": "^5.3.2"
   }
 }
